tests/snapshots/arttrie__distinct_first.snap
---
source: tests/arttrie_runner.rs
expression: transcript
---
> Start

trie:
  (empty)

root: None
page_count: 1
page_size: 65536
dirty: []
dirties_before_flush: 16
free_lists:
  (none)

=== page 0 (metadata) ===
dirties_before_flush: 16

> insert key="apple" value="1"

trie:
  Leaf [p2s0] key="apple" value="1"

root: page=2 slot=0 size=64
page_count: 3
page_size: 65536
dirty: [0, 1, 2]
dirties_before_flush: 16
free_lists:
  class 3 (8B): [1]
  class 6 (64B): [2]

=== page 0 (metadata) ===
dirties_before_flush: 16

=== page 1 (data, class=3, slot_size=8, slots=8063, bitmap_bytes=1008) ===
prev: 0  next: 0
occupied_slots: [0, 1]
slot[0]: 61 70 70 6c 65 00 00 00  |apple...|
slot[1]: 31 00 00 00 00 00 00 00  |1.......|

=== page 2 (data, class=6, slot_size=64, slots=1021, bitmap_bytes=128) ===
prev: 0  next: 0
occupied_slots: [0]
slot[0]: 05 00 00 00 05 00 00 00 01 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00  |................................................................|

> insert key="banana" value="2"

trie:
  Node4 [p3s0] count=2 prefix=""
    'a'/0x61 ->
      Leaf [p2s0] key="apple" value="1"
    'b'/0x62 ->
      Leaf [p2s1] key="banana" value="2"

root: page=3 slot=0 size=256
page_count: 4
page_size: 65536
dirty: [0, 1, 2, 3]
dirties_before_flush: 16
free_lists:
  class 3 (8B): [1]
  class 6 (64B): [2]
  class 8 (256B): [3]

=== page 0 (metadata) ===
dirties_before_flush: 16

=== page 1 (data, class=3, slot_size=8, slots=8063, bitmap_bytes=1008) ===
prev: 0  next: 0
occupied_slots: [0, 1, 2, 3]
slot[0]: 61 70 70 6c 65 00 00 00  |apple...|
slot[1]: 31 00 00 00 00 00 00 00  |1.......|
slot[2]: 62 61 6e 61 6e 61 00 00  |banana..|
slot[3]: 32 00 00 00 00 00 00 00  |2.......|

=== page 2 (data, class=6, slot_size=64, slots=1021, bitmap_bytes=128) ===
prev: 0  next: 0
occupied_slots: [0, 1]
slot[0]: 05 00 00 00 05 00 00 00 01 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00  |................................................................|
slot[1]: 05 00 00 00 06 00 00 00 01 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 03 00 00 00 00 00 00 00  |................................................................|

=== page 3 (data, class=8, slot_size=256, slots=255, bitmap_bytes=32) ===
prev: 0  next: 0
occupied_slots: [0]
slot[0]: 01 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 61 62 00 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |....................................................................ab..@.......................@...............................................................................................................................................................|

> insert key="cherry" value="3"

trie:
  Node4 [p3s0] count=3 prefix=""
    'a'/0x61 ->
      Leaf [p2s0] key="apple" value="1"
    'b'/0x62 ->
      Leaf [p2s1] key="banana" value="2"
    'c'/0x63 ->
      Leaf [p2s2] key="cherry" value="3"

root: page=3 slot=0 size=256
page_count: 4
page_size: 65536
dirty: [0, 1, 2, 3]
dirties_before_flush: 16
free_lists:
  class 3 (8B): [1]
  class 6 (64B): [2]
  class 8 (256B): [3]

=== page 0 (metadata) ===
dirties_before_flush: 16

=== page 1 (data, class=3, slot_size=8, slots=8063, bitmap_bytes=1008) ===
prev: 0  next: 0
occupied_slots: [0, 1, 2, 3, 4, 5]
slot[0]: 61 70 70 6c 65 00 00 00  |apple...|
slot[1]: 31 00 00 00 00 00 00 00  |1.......|
slot[2]: 62 61 6e 61 6e 61 00 00  |banana..|
slot[3]: 32 00 00 00 00 00 00 00  |2.......|
slot[4]: 63 68 65 72 72 79 00 00  |cherry..|
slot[5]: 33 00 00 00 00 00 00 00  |3.......|

=== page 2 (data, class=6, slot_size=64, slots=1021, bitmap_bytes=128) ===
prev: 0  next: 0
occupied_slots: [0, 1, 2]
slot[0]: 05 00 00 00 05 00 00 00 01 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00  |................................................................|
slot[1]: 05 00 00 00 06 00 00 00 01 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 03 00 00 00 00 00 00 00  |................................................................|
slot[2]: 05 00 00 00 06 00 00 00 01 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 04 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 05 00 00 00 00 00 00 00  |................................................................|

=== page 3 (data, class=8, slot_size=256, slots=255, bitmap_bytes=32) ===
prev: 0  next: 0
occupied_slots: [0]
slot[0]: 01 03 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 61 62 63 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |....................................................................abc.@.......................@.......................@.......................................................................................................................................|

> get key="apple"

result: Some("1")
stats: nodes=2 inner=1 edges=1 prefix_bytes=0 leaf_compared=true

trie:
  Node4 [p3s0] count=3 prefix=""
    'a'/0x61 ->
      Leaf [p2s0] key="apple" value="1"
    'b'/0x62 ->
      Leaf [p2s1] key="banana" value="2"
    'c'/0x63 ->
      Leaf [p2s2] key="cherry" value="3"

root: page=3 slot=0 size=256
page_count: 4
page_size: 65536
dirty: [0, 1, 2, 3]
dirties_before_flush: 16
free_lists:
  class 3 (8B): [1]
  class 6 (64B): [2]
  class 8 (256B): [3]

=== page 0 (metadata) ===
dirties_before_flush: 16

=== page 1 (data, class=3, slot_size=8, slots=8063, bitmap_bytes=1008) ===
prev: 0  next: 0
occupied_slots: [0, 1, 2, 3, 4, 5]
slot[0]: 61 70 70 6c 65 00 00 00  |apple...|
slot[1]: 31 00 00 00 00 00 00 00  |1.......|
slot[2]: 62 61 6e 61 6e 61 00 00  |banana..|
slot[3]: 32 00 00 00 00 00 00 00  |2.......|
slot[4]: 63 68 65 72 72 79 00 00  |cherry..|
slot[5]: 33 00 00 00 00 00 00 00  |3.......|

=== page 2 (data, class=6, slot_size=64, slots=1021, bitmap_bytes=128) ===
prev: 0  next: 0
occupied_slots: [0, 1, 2]
slot[0]: 05 00 00 00 05 00 00 00 01 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00  |................................................................|
slot[1]: 05 00 00 00 06 00 00 00 01 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 03 00 00 00 00 00 00 00  |................................................................|
slot[2]: 05 00 00 00 06 00 00 00 01 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 04 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 05 00 00 00 00 00 00 00  |................................................................|

=== page 3 (data, class=8, slot_size=256, slots=255, bitmap_bytes=32) ===
prev: 0  next: 0
occupied_slots: [0]
slot[0]: 01 03 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 61 62 63 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |....................................................................abc.@.......................@.......................@.......................................................................................................................................|

> get key="banana"

result: Some("2")
stats: nodes=2 inner=1 edges=1 prefix_bytes=0 leaf_compared=true

trie:
  Node4 [p3s0] count=3 prefix=""
    'a'/0x61 ->
      Leaf [p2s0] key="apple" value="1"
    'b'/0x62 ->
      Leaf [p2s1] key="banana" value="2"
    'c'/0x63 ->
      Leaf [p2s2] key="cherry" value="3"

root: page=3 slot=0 size=256
page_count: 4
page_size: 65536
dirty: [0, 1, 2, 3]
dirties_before_flush: 16
free_lists:
  class 3 (8B): [1]
  class 6 (64B): [2]
  class 8 (256B): [3]

=== page 0 (metadata) ===
dirties_before_flush: 16

=== page 1 (data, class=3, slot_size=8, slots=8063, bitmap_bytes=1008) ===
prev: 0  next: 0
occupied_slots: [0, 1, 2, 3, 4, 5]
slot[0]: 61 70 70 6c 65 00 00 00  |apple...|
slot[1]: 31 00 00 00 00 00 00 00  |1.......|
slot[2]: 62 61 6e 61 6e 61 00 00  |banana..|
slot[3]: 32 00 00 00 00 00 00 00  |2.......|
slot[4]: 63 68 65 72 72 79 00 00  |cherry..|
slot[5]: 33 00 00 00 00 00 00 00  |3.......|

=== page 2 (data, class=6, slot_size=64, slots=1021, bitmap_bytes=128) ===
prev: 0  next: 0
occupied_slots: [0, 1, 2]
slot[0]: 05 00 00 00 05 00 00 00 01 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00  |................................................................|
slot[1]: 05 00 00 00 06 00 00 00 01 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 03 00 00 00 00 00 00 00  |................................................................|
slot[2]: 05 00 00 00 06 00 00 00 01 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 04 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 05 00 00 00 00 00 00 00  |................................................................|

=== page 3 (data, class=8, slot_size=256, slots=255, bitmap_bytes=32) ===
prev: 0  next: 0
occupied_slots: [0]
slot[0]: 01 03 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 61 62 63 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |....................................................................abc.@.......................@.......................@.......................................................................................................................................|

> get key="cherry"

result: Some("3")
stats: nodes=2 inner=1 edges=1 prefix_bytes=0 leaf_compared=true

trie:
  Node4 [p3s0] count=3 prefix=""
    'a'/0x61 ->
      Leaf [p2s0] key="apple" value="1"
    'b'/0x62 ->
      Leaf [p2s1] key="banana" value="2"
    'c'/0x63 ->
      Leaf [p2s2] key="cherry" value="3"

root: page=3 slot=0 size=256
page_count: 4
page_size: 65536
dirty: [0, 1, 2, 3]
dirties_before_flush: 16
free_lists:
  class 3 (8B): [1]
  class 6 (64B): [2]
  class 8 (256B): [3]

=== page 0 (metadata) ===
dirties_before_flush: 16

=== page 1 (data, class=3, slot_size=8, slots=8063, bitmap_bytes=1008) ===
prev: 0  next: 0
occupied_slots: [0, 1, 2, 3, 4, 5]
slot[0]: 61 70 70 6c 65 00 00 00  |apple...|
slot[1]: 31 00 00 00 00 00 00 00  |1.......|
slot[2]: 62 61 6e 61 6e 61 00 00  |banana..|
slot[3]: 32 00 00 00 00 00 00 00  |2.......|
slot[4]: 63 68 65 72 72 79 00 00  |cherry..|
slot[5]: 33 00 00 00 00 00 00 00  |3.......|

=== page 2 (data, class=6, slot_size=64, slots=1021, bitmap_bytes=128) ===
prev: 0  next: 0
occupied_slots: [0, 1, 2]
slot[0]: 05 00 00 00 05 00 00 00 01 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00  |................................................................|
slot[1]: 05 00 00 00 06 00 00 00 01 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 03 00 00 00 00 00 00 00  |................................................................|
slot[2]: 05 00 00 00 06 00 00 00 01 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 04 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 05 00 00 00 00 00 00 00  |................................................................|

=== page 3 (data, class=8, slot_size=256, slots=255, bitmap_bytes=32) ===
prev: 0  next: 0
occupied_slots: [0]
slot[0]: 01 03 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 61 62 63 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |....................................................................abc.@.......................@.......................@.......................................................................................................................................|

> get key="date"

result: None
stats: nodes=1 inner=1 edges=0 prefix_bytes=0 leaf_compared=false

trie:
  Node4 [p3s0] count=3 prefix=""
    'a'/0x61 ->
      Leaf [p2s0] key="apple" value="1"
    'b'/0x62 ->
      Leaf [p2s1] key="banana" value="2"
    'c'/0x63 ->
      Leaf [p2s2] key="cherry" value="3"

root: page=3 slot=0 size=256
page_count: 4
page_size: 65536
dirty: [0, 1, 2, 3]
dirties_before_flush: 16
free_lists:
  class 3 (8B): [1]
  class 6 (64B): [2]
  class 8 (256B): [3]

=== page 0 (metadata) ===
dirties_before_flush: 16

=== page 1 (data, class=3, slot_size=8, slots=8063, bitmap_bytes=1008) ===
prev: 0  next: 0
occupied_slots: [0, 1, 2, 3, 4, 5]
slot[0]: 61 70 70 6c 65 00 00 00  |apple...|
slot[1]: 31 00 00 00 00 00 00 00  |1.......|
slot[2]: 62 61 6e 61 6e 61 00 00  |banana..|
slot[3]: 32 00 00 00 00 00 00 00  |2.......|
slot[4]: 63 68 65 72 72 79 00 00  |cherry..|
slot[5]: 33 00 00 00 00 00 00 00  |3.......|

=== page 2 (data, class=6, slot_size=64, slots=1021, bitmap_bytes=128) ===
prev: 0  next: 0
occupied_slots: [0, 1, 2]
slot[0]: 05 00 00 00 05 00 00 00 01 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00  |................................................................|
slot[1]: 05 00 00 00 06 00 00 00 01 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 03 00 00 00 00 00 00 00  |................................................................|
slot[2]: 05 00 00 00 06 00 00 00 01 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 04 00 00 00 00 00 00 00 08 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 05 00 00 00 00 00 00 00  |................................................................|

=== page 3 (data, class=8, slot_size=256, slots=255, bitmap_bytes=32) ===
prev: 0  next: 0
occupied_slots: [0]
slot[0]: 01 03 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 61 62 63 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 01 00 00 00 00 00 00 00 40 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |....................................................................abc.@.......................@.......................@.......................................................................................................................................|
